Build Header Components.

--- a/client/Amazon/src/assets/sass/style.scss
+++ b/client/Amazon/src/assets/sass/style.scss
@@ -1,2 +1,13 @@
 @import './variable';
 @import './reset';
+
+.nav {
+  background-color: $color-bg-primary;
+  &__logo {
+    display: inline-block;
+  }
+}
+
+.header {
+  color: #fff;
+}
