--- a/client/Amazon/src/assets/sass/_reset.scss
+++ b/client/Amazon/src/assets/sass/_reset.scss
@@ -15,3 +15,16 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.6rem;
 }
+span {
+  display: inline-block;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
