--- a/client/Amazon/src/components/Hero/hero.css
+++ b/client/Amazon/src/components/Hero/hero.css
@@ -1,5 +1,5 @@
 .carousel-indicators {
-  bottom: 50%;
+  bottom: 60%;
 }
 
 .carousel-control-prev,
@@ -34,6 +34,10 @@
     rgba(245, 246, 246, 0) 0%,
     rgba(227, 230, 230, 1) 100%
   );
-  height: 35%;
+  height: 60%;
   width: 100vw;
+}
+
+.hero {
+  margin-bottom: -25%;
 }
