Building Payment components with Functionality.

--- a/client/Amazon/src/components/Category/category.css
+++ b/client/Amazon/src/components/Category/category.css
@@ -5,7 +5,7 @@
 }
 
 .category {
-  height: 350px;
+  /* height: 350px; */
   background-color: #fff;
   box-shadow: 0 0 2rem 1rem rgba(0, 0, 0, 0.1);
   margin: 1rem;
